--- a/FileRemover/Form1.resx
+++ b/FileRemover/Form1.resx
@@ -120,4 +120,168 @@
   <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAA3IAAAGZCAYAAADMywOJAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAJB5JREFUeF7t3U+orftd3/HOW9vSQCetoUlTiGAyuHQglA4CmcSBUxFKMGBHrcOG
+        DnRkhpJoJu1EqCCWFGws2CpXSiTBGOTeiVdQY7ChGmIlSeFeLhfjDdvzWezfye/8zm+t9Tzr/3ft1wu+
+        rH32XnutZ6+9zznrvX/P86y/8wAAAEApQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUI
+        OQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIO
+        AACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMA
+        AChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAA
+        ihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBi
+        hBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBgh
+        BwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgB
+        AAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAA
+        AMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABA
+        MUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCM
+        kAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPk
+        AAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkA
+        AIBihBxwFd97++2HL3/r9x/+05/98sMn3/i5h5/4rZ/czCv/7V9vLvO+fCzX+e7fvPv4WQAAhJADLuqr
+        b35tE2iJtX/6n9//8Hd/8T0vTN7XYq4FnZgDAHiRkAMuIjG2Ld7y/sRdIi8Sbe9++zubVbs2AAB8n5AD
+        zqoF3BhvCbqstrV4S7h994//5OHtV3/74a2f/4WHb/3Hn9lM3n7z1z7/8M5rrws6AIBHQg44i4RZQm3b
+        Cly/+pZQ+8Ynfurhz9/7gefzFx/80At/zvzZRz768M4Xv7T5PACAp0zIASeXVbgc5zYGXKIuu1A2WX0b
+        A27fJPCySueYOQDgKRNywEllFW4MuEzCLoHXJMZmobZ0stulmAMAniohB5zEX/31t6bHwrWIa7tSRiJs
+        FmdrJ7cDAPAUCTngaIm02a6Uf++/vPfhBz/3oRdW4k4VcW2ysgcA8NQIOeAoibQP/tKHF0XcsbtTbhsx
+        BwA8NUIOONiuiPuBz/2LF05skjNTziLsVPPWr/zq4z0BANw/IQccJBE3e2mBFnE56Uk7GUleH272cgKn
+        mD/6Z//8+WXOggkA8BQIOWC1bRGXgMtkl8qc/CTyIt5rX2JgybSA6yevM5doBAC4d0IOWGXf7pSZ//7N
+        33y89sNml8cxuE45/YpcLhNzeTFyAIB7JuSAxXJ2ylnEZX7g8z+0ibi8BEHbpfLdb/7lWXapHONtfJ/X
+        mAMA7p2QAxbJrpKzlxjYRNzjSlzmnGep7MOt//Ps0slPAIB7JuSAvbK6lZW27D45Rtxml8puNa455Wpc
+        H3C74q1dZnLf77z2+uPWAADcFyEH7JUzUI4B9zziutW4F46NO8Nrxu2Lt3E2Jz+xiyUAcIeEHLBTXguu
+        D7eXQm7Lalwi6rX3vf95hK2dhNjsctfH+stMVuVyvBwAwL0RcsBW7WUG+oBrbz9fjXsMuf7Fv7Ma98X3
+        v/+FaZF1yGwLtSWTmPP6cgDAvRFywFR2SczJTfpwazH3POQeI+6VVz+2OaNlk9W4MeTaJK76SOunfeyQ
+        y12zeUmCb/7l49YBANQn5ICpdlzcLOSeR9xjyP3oH37i8bMeNqtfs4AbZ9tulwmvbZdtxj/ve3/GLpYA
+        wD0RcsBLsptkYm2MuP6yRVwu+5OcfOMTPzUNt22ToEtoJcL6ae+bXbYZ/7xv7GIJANwLIQe8oL3odx9t
+        7e02/WpcdqvMa8xFO8nJLNj2zRh07e0+xI6Z3L5dLAGAeyHkgBe014vrA258uw+5frfKN3/t89NIGydR
+        NXt/pgVdZhZ0x8bd1z/z6cetBQCoS8gBz812qezf3qzGPYu3v/+/Pvw85HIsXZPj0GZxtm0SbS3qxrhr
+        QXeKVbk+DvP2O1/80uMWAwDUJOSAjbzUwA9+7kPP422cRNwm5Npq3LNJ0LXj49799ncW7Va5K9za5fh2
+        Yu7YoMvttMscx5ftBQCoSsgBG+MulS3exrefr8Y9m4Rfe9mBrHL1YbZk+mAbL9vb7c9jmO2b9jn95/bv
+        e+tXfnWz3QAAFQk5YLOq1oJt27y0W+Wzed8XPvL8RCcJoxZes0k8zS53fSyX49styrZNf5329niZ28sL
+        hTvxCQBQlZCDJy4rau2Fv7dNW41ru1O2kOtPdLLm+LgE1dLLNvlze18LtV3TrtdfjuO15QCAqoQcPHE5
+        WckYbuP0u1XOQu57b7+99fi4BNPsctfHctlm15+3hVv/9rbL3E62+Z3XXt98DQAAlQg5eMJygpMEWnaZ
+        7MNtnBZy/+B//8sXQq6dsfK7f/wnmzAapwXT+Oddl0unXT9h1qb/c3u7XX/b5MQnAADVCDl4or77N+9O
+        T3Aym3Z8XB9yeTsvVxA51izHyOV15LLC9cJ88Uub9+fj2ZUx4ZSVsERUYqwPuDHq+o/tm10Bty/s3n71
+        tzdfBwBAFUIOnqic4GTfSlw/Ld763StbyK2V8Evg5cW5W9gdEm+z6WNtW7iNY1UOAKhGyMETlNW4V179
+        2CbkWsxti7r++Lg+5DLtNeSO1Vb0ElQtro4Ju6UB1yb34eUIAIBKhBw8QVlJa6G2dFUuEXeukOvleLus
+        1LXdL4+ZNUGXiMxJWwAAKhBy8MTkdd9mq3G7VuTysUuFXPPut7+zObauX6U751iVAwAqEXLwxLSXG2jx
+        1gfctpibhVzezlkvzy27geZkJAm6Y4+f2ze5Dy8SDgBUIOTgCdm8+PeW1bj259m0cLvkitwouz0m6E6x
+        y+VsEomZrALeqkRtzgSaxyEnixGdnEt+1i7l/377nYcv/en/f/ifb/zVwxvfeOvxvbcpj8u1t/X/vfnX
+        m/vPduRt4OkScvCEZDWuD7c+4MbLfhJt//D3/tULMZfLS4Zck6DLLpC7gq4dG7f2pCeZW12VayGbl3Bo
+        k8chxxReUrYjj8+SuWQMNNklN4/JbHvabD7+7HqV5LFskyfviZ/MOd5OoFzqe5f7+uXf+8bDv/uvf7SZ
+        n/n1P90EyjV+dvbJNiWgso3X2tZ8fz796v95/njlscv7gKdJyMETMa7GzWZbyCXaEnIt4K6xIjfKk/HE
+        zCzG+lkTc21V7tZeVy6rbwnXv/jghx7+/L0feD75c+atn/+Fi4VJvy395ex9l47MyM/Erm1rb+d6txgL
+        TbYtT9ATDu2J+0d/8fXNfPhTXz7b/OP/8IWHH/+lP9iE3Tnl60sItfscJ9uQr/1WJDjz2G/b1nPHVB6v
+        /BzMHq/3/OzvboLuln+egfMQcvBE5EyVY7i16QOuXfbTQi6XLeRyec2Qa5bsbrl2ZW6zKncjKzZZdevj
+        bdtcapvzeCeEZtvQT65zjZDL4zDbnnFuNeRavCUOtkXOuefcuwwmEvP1ze57nATKteXx2Pe9SOSdM34T
+        vbP77SehBzwtQg6egCWrcW1mMddHXB9yh74g+Klld7+2OjfuVtlHXHt7dtKU9r62Kpdj0a5tacS1ScSc
+        O06yIifkTi8RkGi5Vry1OfcqWB7zbStb2+aaK3Nrtjdxeo6fqXz9s/ubTXb1BJ4OIQdPwGY17vM/9FK0
+        9TMLuPa+hNws5nLM3S3JiUrGQNsVdpk+6vq3LxFFuySCZgGyb7Kb5TkJudPLE/W1cXOOucSKTnYRnd33
+        rkncXus4sDURlTl1SCXw18R9Vu5u5ecaOD8hB3fu+evG7Qm5cfaFXObWQi4SD3kyPwZbH3KZbQGXt9vk
+        xBjXkBXG7C46C5Alc87VRCF3Womn2RPyS09C8tyPR1YcZ/e9ZM612rVL7m/JLo39nPpxXPvzkeg79/GN
+        wO0QcnDnchzbJuIWhlyLt+ch9+zztoXcj/7hJx7v5bbkWLF+V8s+4vr3tWBrAZfL/u2vf+bTj7d4Wdn2
+        WXwsnUTguY6XqxByS7bvFkJubSScay7x5H/JcWb75tLHy+UxOWSl9FTbmVXI2e3vG7tXwtMh5OCOZTXu
+        J37rJ78fcgtjLtNCLrtQtogbYy4rfdd+MrxNtiu7GbY42xVz7Tpj2CWILv31ZffQWXisnYTKOViRO41b
+        WYnLGQ8vcVzc0pOb7Jps67lPxNJLEM22Y9+cKowP2Q0146Qn8HQIObhjX/7W778YcQtDrl+VS8j9oz/4
+        6HRF7n1f+MgmFm9ZThiSqGixNobcGHD9nzOXfCmChM8xu1T2k6/5HNsu5I53zC6Gp55LPOk/ZbQmCC+1
+        6+Ax253V1mMcGpGZS+wmC9wGIQd3Kv+Rb14AfBZyC4JuXJGbrcol5G7hJQhGeRLU717Uv0RBH3BjzI2X
+        mYTBJeT7tTRCls5mF8sTH+cn5I6TCDl0F8N8Xp6ktxeDPnYuEXHHBMm2ucR252fjmFXEfK+OWT285n0D
+        dQg5uFNZKUtoHRtyCbasyLWIG1fmbuUlCHo/9qnfefjAv/ncCzGXE4DsirkWbmPMbWLoAq/PtvalBpbO
+        qXexdIzccQ45Li7xlni51pkbD3XoMWZLpv+7fQ55rA8N7jaJsUOsPVPmbC59PCFwHUIO7lQCK6tpL4Vc
+        i7h2uWP6kNu2KndrZ67ME7wf/unf2ITcSzH3LELGmOtnjLk2iaxzSvAsiY9DJ8fdnYoVucMdEgcJuGsE
+        5ymc82Qu59598FS7v64NznxNp4jfrLgC90/IwZ3KGSUTa9OYS6i1yy2zb0WuXd7amSs//tmvPI+4bTGX
+        yEisjUE3Blybc+5eufalBrLtiZA14ZfrnmoXSyF3uLXHXJ37JCTntHZVKatXa3cnPPY4tF0SQrP7XDtr
+        g3Ptz8i2yS8MLnUsIXA9Qg7u0Fff/Npmt8qtK3KZBFu73DKzFbk+5jK5n9zfLciToDHiMlmh648ZyTFz
+        CY0+4trMQi6hda4oyZk1Z6GxbdoLfq/9vATOKcJFyB1uTajkZ7mqtSuPLTry/Vi7YnmOXSyXbsfSbV26
+        m+PSx23p/Z7jsQFui5CDO5TdKhNpCbljYm5fyLXLWzjhSULtRz756jTkMvlYH3PZXXK2i+W2VblT7p7Y
+        JIpmkbFtNkH5GB85bm/NSl7mFLuIVgi5Jdt36ZBbc7zYuXcbPLe1K2t9tK7dpTFRc+qVpyWribnfbOvS
+        8FqyjUt2Rc3PxtL7PeeKJXAbhBzcoezu2CJuZ8wl2NrlZBJyibVZyLVJyF37OLk86W27VL733/6P55ft
+        7TY5CUr/hCpP5mcxNwu5XPeUsqvj2l0qc8KW3toQPEVcWZE7TFZHljz5zixdwblFa0Ms0dd/H/L22hA8
+        9fFgS4Iq38ts69LjAPetsOaXTLPPG6f9bCz5WcrjCNw3IQd3pt+tcm/IZRJt7XKYXStyLeJymXC85uvJ
+        5cnUGHGzy0ye9LUnjjk+LU/8x5CbxVyi65S/+U9IzAJj27RdKkeH7GJ5zFk4hdxhEnKzJ9uzqbpL3JpY
+        zeS6s79Th5wU5pTxu2TltEXS0gDL19PvETBackxefxtLtnHffQL1CTm4M9mtMoE1htzWmEu0tcthlq7I
+        5TIvPn4NeQLXB1s/22Ku/+14YiORti/kMomYU8gujrO42DaJk20O2sVySxQuIeQOsybkKj75zmO5dNfR
+        NrtO5rJ2ZS/RkgA8Vh77JRHZ/xuydFVu28rh0p+NflfJpfd5ysAFbo+QgzuT1bFZyCXW1sbcGHK7jpW7
+        xuvJ5Ylgi7M+4HZNu36/6pHj35acwfIUx8klbpaEUJslQZRdLtfcZmbcTXOpCiG3ZPuE3GktDYs2fZRs
+        s/bMkafYlTCBNrvtcfoIzffrPT/7u9PrjTN+b9cEcP+5S88KeurdToHbIuTgjmQ3pRZyY8wl1A4JudxO
+        Am7fqlzu99JPjHM2ylmszaaPvbyd4+X67c0T+z7kMmPI5TrHaLtyzsJi2yyNx7W7WGYVL9uzlhW5wyxd
+        6cn0v2SoYGlUtMnjsOSxv8YulkuOz5ut/i0N2dx+/7UvfezG8F1zhstL/pwDlyXk4I5k98Z2fNwYcm1e
+        irh+Dgy5NpfavXJtxM0mMdf/tjrRMe5iOa7K5eM5FvDQJ0ZrY2tNOK59PbrMIbtYCrnD5L6WrrwsWa26
+        Ffnl0drYWrPieEgkrrn93tI4GmMs1kRnC/Wlj12uM4Zj7n9JdGb61UPgvgg5uCN5GYCEVz/HxNxs18pt
+        QZf7usTulaeKuEx2h+qf9CVsWsTlyf4s5BInB61kvfb6SzGxa3Jfa09Kkm1bEln95DX11hByh1u6q+D4
+        c3mr1sREm0NWzNbuYplgPuR7uzQat52Bcu2q3KGrcc3S3UAr/WIAWEfIwR1pJzo5Vchlchst4LZFXCbX
+        e+XVj5317JV54vNP/v1vbmJsvFw6bRfLPFnO5ElV01a1+lW5PuQyCZm1gbX2pQYyuZ9DHLKLZbZvqQoh
+        t2T7rhFya07gkZ/LU54l9RzWnpCk/7u2Rh6HtSdS2RZbuywNxm27vq5Zncxjt+Rryu1t+znIdsw+Z5xD
+        wxa4fUIO7sgs5DKHxtxs18p9QXeuFwfPE7MWY9tibttlm0Rcnti0iGvTrxLkjJK7Qi7HrK0JlDyBSjTM
+        YmLbHLLLY5P7W3sc3ppdOK3IHW5tkCR8bnVlLtu1NFoyue4xX8shu1huC66Zpd+bXWEVS1fJlj52u4J0
+        aTge+9gDt0vIwR1JyCWmZiHXLvuQ2xp03YpcrtPibV/EZU79mnJ5sp3flLcw2zV9vPXva5MnNWPEZfIE
+        rm3zuCo37l759c98etXuiAm/WUhsm4TIMa/zFoe8JMHSk6qsCbljv45DLA25Y2L5GEuf6LfJk/B8To6R
+        upVVlWzHmiDNHLJL5WjtCuCalailq1v5t2jXbS6NqyWT29kVje3fxtnnjnOKxx+4PUIOist/9O1A+Jxs
+        JDE1htwYcW22Rly73BFyu4LuVKty+S3yxz/7ledRtnZawOXtWcD188KqXHes3BhyWcnJqt0Sa49Zm61i
+        ZbfHRFbicenkNs61i+WakMvjlOvPtvEU0x6X3tKQy/XOuW2ZfP3jY3pIBGXypD5P2vNzmtWpc07uY1dA
+        LD0WrE22e5Rwmt33tsn1M2sfu6XHhy0N7CVBlOvMPnftnPK+Zt8DoD4hB8UldvKfeftPPytiiamDQy7z
+        GHPZtTJvjyHXIq5d9pP7OsWqXJ68/cgnX30pzpbOvlW4cbIbW9vmPPlOiLSY60MuAZBVuX3yhH1pVLQZ
+        AzHbsXZlrc2agGyT7d1nachdasbHLF/DrWxfvnez3UuXrv5ca3Ydn7d22xNe422dKnSWTP5uZ5t3yd/V
+        fM2zzx9nyS6Kub1jV+Xy+bmdfbI9s88fZ9/qHlCTkIPi8p9zoqftRpTVsBZUY8i1y3FeCrk2j0E3RlwL
+        uHY5m0PPYJnVxfwWfRZnS2fpKtw4eRybFmHjitzSkFu7IpbbHZ+4tW245IxhNLqlkJsd23eNx2w2eYx2
+        HSN4yZhZM7PwavL+tYEyRtTS8Djl7IuYbNOSr2vXYzPKvyWz21g6/b9Fu2R7lq5SLr1NoA4hB8XlyX97
+        DaN2YPyaVbnMSwHX5nH3yjHi2uQ+2uU4eT27r775tc32LJUnGvk6WpDlyUd/uXRy/Vmo7Zt+96N2bNsh
+        K3JrX2ogT/rH48kSVLPrnnv2BcithFy+DzO3EnJ5nPZZe7zcuSd/98bXK+stPR6rTfv3qFkTHaeeXbsW
+        Lo2uNafxz7/Lh36t+bwlq3HN0l1dx+8HUJ+QgzvRVrGye2AmgTWG3OqYewy5hFkfcP2MAddPgnKJPMHL
+        E60WYf1lP+PHxuvkz7NAWzp5Itt2nUpYJVhmryW3K+TWnmgk95HjqXoJwWvGUmJo2xPJWwi5Xcfz3ULI
+        rTmRyi2tzO1asVm7nbMYWRoc55rZ15dtXBqoa1e0Dt2Fdt+uoKOlIbo2EIHbJ+TgTuQ/88RM+81zTnyS
+        0Foac7tCLp8zBlwmsda/PZtPvvFzm+2ZyZOK/Ja4362pBdn4dv/nXI6T98/ibO20J2vZtkTB2hW5tS81
+        MO4e2M6aee1Y2hYj1w653Peu1a58f64dwWvlifu1Vqra7FptWrrrYZv+FyLN0tg458xWHNveDLPr9zP7
+        mvbJvyFLj71rk+uvteb7s/ZrAG6bkIM7kScN7QyPbReapTGXaJvG3J6QyyTW2uU4eX9CbvwtcP6cJ3ZL
+        n7y2UNv29izIDp3+CW0iq4+4fSG35qUGEhsJtoRbb20Inms2wfTa649b9X3XDrl9x/Dl+zP7vEvMrpXC
+        fbIqPf5S41KTeBj/jjaHxEg78VKzNgTPOflFV/+1Ll012/UY7bJ2VW7talys+R6N3xugNiEHdyT/SSdu
+        Mu0/7OxmOR4z10dcm50x9+yyj7fZtHDLsXGJt5zsZDxzZZ5wrAm4cfqIa5P42ne5ZvKEqG13omFckUvE
+        zWIi0bN2l8o+lPLY5HZn173WbMJkOHbvmiE3O7nJ6Fohty1818oKUYIuf0cuET+5n23HxeVncu3ukGMo
+        JVDXhuC5J49vtnHN17drxXKf3N/sNsdpv4A7xNL7aEHaf4+AuoQc3Jn+ddf6JwZZnVsadGtDLrebeMsZ
+        M8d4izyZS1ieevexhNe2y30f2zbZxmxv5Ni1PuJayPW79uXEIHkC3wdEntS32Nn29hiDuY3+ektv59xv
+        J576J315TPrrLb2dY97O5PFd8gLj7fuw7bbO9fa+lcK18phndSZ/h/PkO1HXJj+n+VleO+Pn5bbarsQz
+        +TvbX3+c8fbGKFwTSpeYfnuzSpi/50v+Tcrn7Xqc9lnyOOTjx8TVtl1XZ9/zfF+P+XqA2yHk4M7kCUr/
+        +mt5gtA/ucqZJBNdia9XXv3YZgVtZ8hlnsVcC7Y2WXFLuOX2Zk9A8r5sS+7/1AF36IxPatqfc9lPe7xm
+        IZf39Y9nAizvyzFleTK/dEaJw7W3cZF5tk397p/ZdXB6vXPOs21YusvixR/HZ/eV7/+5JTry9ylPwPNE
+        /BSzaze+/P3NfSUkZ587Tq6X7evlNpZ+/iUn25SvPds3+/hsZv/GrZXbyb+F+TcmQZV/e/LnvP9YS7+W
+        9rWP3yugJiEHdyj/YbeQy7Tfwo5PRrJ6lpW6BFnCbDb5WCbX2xZtTT6WJwi5r6wi9HHUh9MlZ+195vrt
+        SU6iYAy5rMCNYZP3ZfJ2Vo02l7tmsrKU929uY8nnX3DGrzdvz6537lnqKo/fgpXCU8nfsUTdsZNfRiz5
+        u5zrzT5/nNntrb2NS022p21ve3t2vUz72CnktvJvY3651SZ/zvtPod/ebdN/HKhPyMGdym9e2wtj5zKB
+        krjKE4dT/iee2xp3Act9tYDadtnP7PrXmNx3tr+F3Lgil932ZruOAgBcmpCDO5bf+LaQy7RYye48OSlB
+        oi7Rsus38732G/a2y1VuI7fVx9sh08dUtnd2eanJ19J+Q56zUPYhl13pAABugZCDO5fg+uGf/o3nMZcw
+        6iMq4ZIYy2pawqzf7adN3t+fcKH//GOmxVO2qU3783i56+OnnHydbcUyJzZpEZczOLaVOgCAaxNy8ARk
+        BS0nQGkxNwu6S0wfTC3Mdk1/vfZ2f7nk42sn4dpkV8oWcrteBBwA4NKEHDwRWWXKylofc33UtZCZBdih
+        026zxdahM7uN/n3t7fGy//iSyXXbmfxyAouswrXVuFOdkAAA4BSEHDwxCZUf+9TvTIOun20R1AdaP+36
+        bdptjLd36unvu73dX862rU37eJvsVtmOF+xPdHKJ08sDAKwh5OAJSqzkRCdLgu6QSSS1y2vMLN7GaJtd
+        r3+R3LZbpV0qAYBbJOTgCWtB9/HPfuWFE6IcMgmhfZfb3nftSdBlt9OmvX6ciAMAbpWQAzZBl10uc6KP
+        8aQop5xE07bLNuOfLzE5a2fbpbIdGyfiAIBbJuSAF+SkKNnFMFF3rl0vMwmo/nL2vv5yfPtUk9XI/gXS
+        33nt9c0xcd97++3H9wAA3B4hB2yVwMlKXV6LLsFzztW6cRJZ+y7bjH9eMonUfF19xEVW5trqHADArRJy
+        wCKJmz7sckxZYihxd+zxdWsmEbb0sp9sZ2I0K41ZcRwDDgCgEiEHHKXFXU6a0gIvwdRHXpsE1qknkdZu
+        P/eXyX3npQQSbdmmbJ/XgQMA7omQA84iK3iJp0RUVsBa6CWuWui1aQHWR18/faBl8vltdS23mdvOfbzx
+        jbc2YWnXSADg3gk54Oxy4pAEVkIrk+hqcdcCr0XebNrHW7RlEoiZFm9OTgIAPCVCDgAAoBghBwAAUIyQ
+        AwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QA
+        AACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAA
+        gGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACg
+        GCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMAAChG
+        yAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFy
+        AAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwA
+        AEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAA
+        UIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAU
+        I+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUI
+        OQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIO
+        AACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMA
+        AChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAA
+        ihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBi
+        hBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBgh
+        BwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABAMUIOAACgGCEHAABQjJADAAAoRsgB
+        AAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCMkAMAAChGyAEAABQj5AAAAIoRcgAA
+        AMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPkAAAAihFyAAAAxQg5AACAYoQcAABA
+        MUIOAACgGCEHAABQjJADAAAoRsgBAAAUI+QAAACKEXIAAADFCDkAAIBihBwAAEAxQg4AAKAYIQcAAFCM
+        kAMAAChGyAEAABQj5AAAAIoRcgAAAMUIOQAAgGKEHAAAQDFCDgAAoBghBwAAUIyQAwAAKEbIAQAAFCPk
+        AAAAihFyAAAAxQg5AACAUh4e/haucN5dfvFSLgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>186, 17</value>
+  </metadata>
 </root>
