--- a/FileRemover/View/MainWindowForm.resx
+++ b/FileRemover/View/MainWindowForm.resx
@@ -397,6 +397,9 @@
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>186, 17</value>
   </metadata>
+  <metadata name="BackgroundWorkerGetFiles.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>297, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAU1UAAAEAIABgcgAAFgAAACgAAABTAAAAqgAAAAEAIAAAAAAAPG4AAMMOAADDDgAAAAAAAAAA
